# G-Mind

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  README.md  RUNBOOK.md  alembic.ini  create_structure.py  docker-compose.yml  nginx.conf  pyproject.toml
.claude/: settings.local.json
.github/workflows/: pipeline.yml
monitoring/alertmanager/: config.yml
monitoring/grafana/dashboards/: email-assistant.json
monitoring/grafana/datasources/: loki.yml
monitoring/loki/: loki-config.yml
monitoring/prometheus/: alerts.yml  prometheus.yml
monitoring/promtail/: promtail-config.yml
scripts/: oauth_flow.py  setup_watch.py
src/: config.py  dependencies.py  main.py
src/alembic/: env.py
src/alembic/versions/: 9617af0fa031_initial_schema.py
src/api/: health.py  router.py  tasks.py  webhook.py
src/models/: __init__.py  base.py  email.py  failed_task.py  response.py  task.py
src/repositories/: email_repo.py  worker_repo.py
src/schemas/: ai.py  email.py  emails.py  task.py  webhook.py
src/services/: ai_service.py  email_service.py  queue_service.py  storage_service.py  watch_service.py  webhook_service.py  worker_service.py
src/utils/: gmail.py  limiter.py  logger.py  logging.py  metrics.py  pubsub.py  sanitizer.py
src/workers/: callbacks.py  celery_app.py  tasks.py
tests/: conftest.py
tests/integration/: test_celery_tasks.py  test_end_to_end.py  test_retry_flow.py  test_webhook_flow.py
tests/unit/: test_ai_service.py  test_storage_service.py  test_worker_service.py
